# EventWise

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 01_environment_setup.ipynb
