[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "eventwise"
version = "0.1.0"
description = ""
authors = [
    {name = "Elie W.", email = "elie.wanko@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
    # Core utilities
    "tqdm>=4.66.0,<5.0.0",
    "pandas>=2.3.1,<3.0.0",
    "requests>=2.32.4,<3.0.0",
    
    # AI/ML frameworks
    "langchain>=0.3.26,<0.4.0",
    "langchain-community>=0.3.27,<0.4.0",
    "langchain-mistralai>=0.2.11,<0.3.0",
    "mistralai>=1.9.2,<2.0.0",
    "transformers>=4.53.2,<5.0.0",
    "sentence-transformers>=5.0.0,<6.0.0",
    "faiss-cpu>=1.11.0,<2.0.0",
    
    # Web framework
    "fastapi>=0.116.1,<0.117.0",
    "aiohttp>=3.12.14,<4.0.0",
    "pydantic>=2.11.7,<3.0.0",
    
    # Data visualization and analysis
    "seaborn>=0.13.2,<0.14.0",
    "shap>=0.48.0,<0.49.0",
    
    # Jupyter environment
    "jupyterlab>=4.4.4,<5.0.0",
    "ipykernel>=6.29.5,<7.0.0",
    "ipywidgets>=8.1.7,<9.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0,<25.0.0",
    "ruff>=0.12.3,<0.13.0",
    "mypy>=1.0.0,<2.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "spacy>=3.8.7,<4.0.0",
    "nltk>=3.9.1,<4.0.0",
    "mlflow>=3.1.1,<4.0.0",
]

test = [
    "pytest>=8.4.1,<9.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "httpx>=0.28.1,<1.0.0",
]

# Install everything for full development
# poetry install --extras all

[tool.poetry]
package-mode = false